_custom/css/player.css
/* ... */
#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .timeDisplay div {
	float: left;
	margin-top: -3px;
	margin-left: 3px;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playerContainer .controls .timeDisplay div.totalDuration {
	display: none;
}


#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .hypervideoContainer {
	margin-bottom: 0px;
}

#VideoPlayer .videoStartOverlay {
	display: none !important;
}

#VideoPlayer .mainContainer:not(.editActive) .viewOverview {
	display: none !important;
}

#VideoPlayer .mainContainer:not(.editActive) .viewVideo {
	display: block !important;
}

/* buttons */

#VideoPlayer button, #VideoPlayer input[type="submit"], #VideoPlayer input[type="button"], #VideoPlayer .button {
	/*font-family: 'Rubik', sans-serif;*/
	font-family: 'Inconsolata', monospace;
	letter-spacing: -0.9px;
	text-transform: inherit;
}

#VideoPlayer input[type="text"], #VideoPlayer input[type="password"], #VideoPlayer textarea {
	font-family: 'Inconsolata', monospace;
	letter-spacing: 0px;
}


/* Start iOS / Safari */
.fullscreen-no #VideoPlayer .mainContainer:not(.editActive) .videoContainer {
	width: 100vw !important;
	height: 100vh !important;
}

.fullscreen-no #VideoPlayer .mainContainer:not(.editActive) .videoContainer .hypervideo {
	top: 0%;
	left: 0%;
	width: 100vw !important;
	height: 100vh !important;
	margin-left: 0px !important;
	margin-top: 0px !important;
	min-height: none !important
}

.fullscreen-no #VideoPlayer .mainContainer:not(.editActive) .videoContainer video {
	top: 0%;
	left: 0%;
	width: 100vw !important;
	height: 100vh !important;
	object-fit: contain;
}

.fullscreen-no #VideoPlayer .mainContainer:not(.editActive) .slideArea {
	min-height: 0 !important;
}
/* End iOS / Safari */


/* Inside Hypervideo */
.hypervideo .video {
	-webkit-transform: translate3d(0,0,0);
    -moz-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
    backface-visibility: hidden;
    will-change: filter;
    transition-duration: 1s;
}

.hypervideo .video.nocolor {
	
}

.hypervideo .video.dark {
	
}

.overlayContainer .overlayElement {
	opacity: 0;
	visibility: visible;
	pointer-events: none;
	transition-property: opacity;
	transition-duration: 800ms;
}

.overlayContainer .overlayElement.active {
	opacity: 1;
	pointer-events: all;
}

.overlayElement .resourceDetail {
	transform-origin: center;
}

.overlayElement .resourceDetail[data-type="text"] * {
	color: #ffffff !important;
	font-size: 1vw;
	background: rgba(0,0,0,.45);
	padding: 1vw;
	letter-spacing: 0;
	line-height: 1.15em;
}

.overlayElement .resourceDetail[data-type="image"] img {
	-webkit-transform: translate3d(0,0,0);
    -moz-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
    backface-visibility: hidden;
    will-change: scale;
	transform: scale(0.8, 0.8);
	transform-origin: center bottom;
	transition-property: all;
	transition-duration: 300ms;
}

.overlayElement .resourceDetail[data-type="image"] img:hover {
	cursor: pointer;
  	transform: scale(1,1);
}

.overlayElement .resourceDetail[data-type="image"] img[src="_data/resources/1_1560762493_animation-plane-head.gif"] {
	transform-origin: right center;
}

/* TODO: Fix sizing & scaling of overlays; */
.overlayElement .resourceDetail[data-type="image"] .ps-scrollbar-x-rail, 
.overlayElement .resourceDetail[data-type="image"] .ps-scrollbar-y-rail {
	display: none !important;
}


.overlayElement svg {
	top: 10px;
	left: 10px;
  	width: calc(100% - 20px);
}

.overlayElement svg {
	position: absolute;
	z-index: 11;
	overflow: visible !important;
	transition-property: all;
	transition-duration: 1300ms;
	pointer-events: none;
}

.overlayElement svg.centered {
	position: absolute;
	top: 50% !important;
	left: 50% !important;
	margin-top: -30px;
	margin-left: -30px;
	width: 65px !important;
	height: 65px !important;
	-webkit-animation: spin 2s linear infinite;
    -moz-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
    animation-delay: 1s
}

.overlayElement svg.centered polygon {
	width: 100% !important;
	height: 100% !important;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

.overlayElement .resourceDetail[data-type="image"] svg path, .overlayElement .resourceDetail[data-type="image"] svg polygon {
	stroke: #fff;
	stroke-miterlimit: 1;
	stroke-width: 2px;
	transition-property: fill, opacity;
	transition-duration: 800ms;
	pointer-events: none;
}

.overlayElement svg.active {
	pointer-events: all;
}

.overlayElement svg.active path, .overlayElement svg.active polygon {
	opacity: 1;
	pointer-events: all;
}

.overlayElement svg.active path:hover, .overlayElement svg.active polygon:hover {
	cursor: pointer;
	fill: rgba(255,255,255,.4);
}

#transitionContainer {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	opacity: 0;
	z-index: 10;
	pointer-events: none;
	transition-property: opacity;
	transition-duration: 1s;
	background: rgba(0,0,0,.8);
}

#transitionContainer.active {
	opacity: 1;
	pointer-events: all;
}

#transitionContainer audio {
	position: absolute;
}

.transitionCanvas {
	position: absolute;
	width: 100%;
	height: 100%;
	display: none;
}

.transitionCanvas svg {
	position: absolute;
	top: 0px;
	left: 0px;
}

.continueButton {
	position: absolute;
	bottom: -60px;
	right: 20px;
	width: 70px;
	height: 34px;
	transition-property: all;
	transition-duration: 800ms;
	background: transparent;
	z-index: 14;
	opacity: 0;
	pointer-events: none;
}
/* ... */

